fixed alignment issue with StakingSection

--- a/components/TokenPage/StakingSectionNew/stakingsection.module.scss
+++ b/components/TokenPage/StakingSectionNew/stakingsection.module.scss
@@ -5,7 +5,7 @@
 .staking-section {
   position: relative;
   background: $gray--1;
-  display: flex;
+  display: grid;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
   @include lg {
     place-items: center;
     display: grid;
-    grid-template-columns: 0.75fr 1.5fr;
+    grid-template-columns: 0.95fr 1fr;
     gap: 4rem;
   }
 }
@@ -46,6 +46,8 @@
 .img-wrapper {
   display: flex;
   justify-content: center;
+  align-items: center;
+  height: 100%;
   max-width: 100%;
 
   @include lg {
@@ -54,7 +56,8 @@
 }
 
 .img-wrapper img {
-  width: 100%;
+  max-height: 28rem;
+  object-fit: contain;
 }
 
 .content-left {
@@ -70,17 +73,8 @@
 }
 
 .content-right h2 {
-  margin: 0 auto;
-  text-align: center;
-
   @include lg {
     padding-left: 1rem;
-    // padding-bottom: 3rem;
-    text-align: left;
-  }
-
-  @include xl {
-    padding-left: 5rem;
   }
 }
 
@@ -91,44 +85,18 @@
   justify-content: center;
   padding-top: 2rem;
   margin-left: 1.5rem;
-}
 
-.text-wrapper {
-  padding-left: 1.5rem;
-  padding-bottom: 1rem;
-
-  @include sm {
-    padding-left: 0.5rem;
-  }
-
-  @include md {
-    padding-left: 0.5rem;
+  @include lg {
+    gap: 2rem;
   }
 }
 
-.text-wrapper h3 {
+.step h3 {
   font-family: 'montserrat', serif;
   font-weight: 600;
 }
 
-.step {
-  flex: 30%;
-  min-width: 12rem;
-  max-width: 20rem;
-  // font-weight: 600;
-}
-
-.step p:nth-of-type(2) {
-  padding-bottom: 0.15rem;
-}
-
-// .light .step p:last-of-type {
-//   color: $gray-dark;
-// }
-
 .number {
-  padding-left: 2rem;
-  padding-bottom: 0.75em;
   color: $blue--2;
 
   @include md {
@@ -136,41 +104,30 @@
   }
 }
 
-.title {
-  font-weight: bold;
-  padding-left: 2rem;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  height: 18px;
-  background-image: url('../../../public/icons/check-green-circle.svg');
-  background-repeat: no-repeat;
-  object-fit: contain;
-  background-position: top left;
+.title-wrapper {
+  position: relative;
+}
 
-  @include md {
-    padding-left: 2rem;
-    margin-left: -1rem;
-  }
+.title {
+  padding-left: 1rem;
+}
+
+.check {
+  position: absolute;
+  width: 1.15rem;
+  height: 1.15rem;
+  padding: 0.15rem;
+  background: $green--2;
+  top: 0.4rem;
+  left: -1rem;
+  border-radius: 50%;
+  color: black;
 }
 
 .description {
-  width: 80%;
-  display: flex;
-  align-items: center;
-  padding-left: 1.4rem;
-  border-left: 2px dashed $gray;
+  color: $gray--9;
+  border-left: 2px dashed $gray--12;
+  padding: 1rem;
   margin-top: 1rem;
-  margin-left: 7px;
-  height: 100%;
-  color: $gray;
-  margin: 0 auto;
-
-  @include sm {
-    width: 90%;
-  }
-
-  @include md {
-    width: 100%;
-  }
+  max-width: 47ch;
 }
